Patient Portal Site Login Demo/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>X1st_Deposit_Date__c</fullName>
        <inlineHelpText>Due on Booking</inlineHelpText>
        <label>1st Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Payment_Method__c</fullName>
        <label>1st Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1st_Payment_Remarks__c</fullName>
        <label>1st Payment Remarks</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Deposit_Amount__c</fullName>
        <label>2nd Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Deposit_Due_Date__c</fullName>
        <label>2nd Deposit Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Deposit_Received__c</fullName>
        <label>2nd Deposit Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Payment_Method__c</fullName>
        <label>2nd Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (describe in Notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2nd_Payment_Remarks__c</fullName>
        <label>2nd Payment Remarks</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Deposit_Amount__c</fullName>
        <label>3rd Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Deposit_Date__c</fullName>
        <label>3rd Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Deposit_Due_Date__c</fullName>
        <label>3rd Deposit Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Payment_Method__c</fullName>
        <label>3rd Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (describe in Notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3rd_Payment_Remarks__c</fullName>
        <label>3rd Payment Remarks</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Banquets</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Banquet</value>
        </filters>
        <label>Banquets</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Conferences</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Conference</value>
        </filters>
        <label>Conferences</label>
    </listViews>
    <listViews>
        <fullName>Film_Shoots</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Film_Shoot</value>
        </filters>
        <label>Film Shoots</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Offsite_Catering</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Offsite_Catering</value>
        </filters>
        <label>Offsite Catering</label>
    </listViews>
    <listViews>
        <fullName>Picnics</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Picnic</value>
        </filters>
        <label>Picnics</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Weddings</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Wedding</value>
        </filters>
        <label>Weddings</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Banquet</fullName>
        <active>true</active>
        <businessProcess>MCC Sales Process</businessProcess>
        <description>Banquet</description>
        <label>Banquet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conference</fullName>
        <active>true</active>
        <businessProcess>MCC Sales Process</businessProcess>
        <description>Conference</description>
        <label>Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Film_Shoot</fullName>
        <active>true</active>
        <businessProcess>MCC Sales Process</businessProcess>
        <description>Film Shoot</description>
        <label>Film Shoot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offsite_Catering</fullName>
        <active>true</active>
        <businessProcess>MCC Sales Process</businessProcess>
        <description>Off Site Catering</description>
        <label>Offsite Catering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picnic</fullName>
        <active>true</active>
        <businessProcess>MCC Sales Process</businessProcess>
        <description>Picnic</description>
        <label>Picnic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wedding</fullName>
        <active>true</active>
        <businessProcess>MCC Sales Process</businessProcess>
        <description>Weddings</description>
        <label>Wedding</label>
    </recordTypes>
</CustomObject>